--- a/exercises/events/example.html
+++ b/exercises/events/example.html
@@ -5,6 +5,6 @@
   <h1>Click the button</h1>
   <button>Me!</button>
   <script>
-    
+    $('button').on('click', () => { console.log('clicked btn')})
   </script>
 </body>
